--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "modernfetchingimages",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://crisscrosscrass.github.io/modernfetchingimages/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
@@ -10,6 +12,8 @@
     "tabletop": "^1.5.2"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
